--- a/leLab/leLab/leLab/leLab.csproj
+++ b/leLab/leLab/leLab/leLab.csproj
@@ -14,4 +14,16 @@
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2337" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.1" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Views\CountPage.xaml.cs">
+      <DependentUpon>CountPage.xaml</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Views\CountPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+  </ItemGroup>
 </Project>
