--- a/leLab/leLab/leLab/leLab.csproj
+++ b/leLab/leLab/leLab/leLab.csproj
@@ -16,13 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Update="Views\CountPage.xaml.cs">
-      <DependentUpon>CountPage.xaml</DependentUpon>
-    </Compile>
-  </ItemGroup>
-
-  <ItemGroup>
-    <EmbeddedResource Update="Views\CountPage.xaml">
+    <EmbeddedResource Update="Views\trainig\Page1.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
   </ItemGroup>
